2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Store more information in scribo::document.

	* scribo/core/document.hh: Make a distinction between horizontal
	and vertical lines. Store the binary image.

	* scribo/io/xml/internal/extended_page_xml_visitor.hh,
	* scribo/io/xml/internal/full_xml_visitor.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh,
	* scribo/toolchain/internal/content_in_doc_functor.hh: Make use of
	that new methods and information.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Rename line_info::components() to line_info::component_ids.

	* scribo/core/line_info.hh: Here.

	* scribo/debug/char_space_image.hh,
	* scribo/text/recognition.hh,
	* src/debug/show_text_lines.cc,
	* scribo/io/xml/internal/full_xml_visitor.hh: Update calls to that
	method.

2011-03-14  Guillaume Lazzara  <z@lrde.epita.fr>

	Some changes in debug routines.

	* scribo/debug/save_bboxes_image.hh,
	* scribo/debug/save_linked_bboxes_image.hh: Rename as...
	* scribo/debug/bboxes_image.hh,
	* scribo/debug/linked_bboxes_image.hh: ... this.

	* scribo/debug/links_image.hh: New.

	* scribo/debug/several_links_decision_image.hh:
	Remove. Deprecated.

	* scribo/debug/alignment_decision_image.hh: Make use of
	compute_anchor routine.

	* scribo/debug/all.hh,
	* scribo/table/extract.hh,
	* scribo/toolchain/text_in_picture.hh,
	* src/debug/show_links_several_right_overlap.cc,
	* src/debug/show_links_single_down.cc,
	* src/debug/show_links_single_down_left_aligned.cc,
	* src/debug/show_links_single_down_right_aligned.cc,
	* src/debug/show_links_single_left.cc,
	* src/debug/show_links_single_left_dmax_ratio.cc,
	* src/debug/show_links_single_right.cc,
	* src/debug/show_links_single_right_dmax_ratio.cc,
	* src/debug/show_links_single_up.cc,
	* src/debug/show_links_single_up_left_aligned.cc,
	* src/debug/show_links_single_up_right_aligned.cc,
	* src/debug/show_separators.cc,
	* src/primitive/group/group_from_double_link.cc,