@@ -34,7 +34,7 @@
 
 # include <QByteArray>
 
-# include <scribo/core/internal/doc_xml_serializer.hh>
+# include <scribo/core/internal/doc_serializer.hh>
 # include <scribo/core/document.hh>
 # include <scribo/core/component_set.hh>
 # include <scribo/core/paragraph_set.hh>
@@ -63,7 +63,7 @@ namespace scribo
       {
 
 
-	class full_xml_visitor : public doc_xml_serializer<full_xml_visitor>
+	class full_xml_visitor : public doc_serializer<full_xml_visitor>
 	{
 	public:
 	  // Constructor
